# sqlcipher-lock-demo

./: CMakeLists.txt
include/: basic_loggingstream.hpp  logging.hpp  sqlcipherxx.hpp
src/: CMakeLists.txt  logging.cc  sqlcipherxx.cc
tests/: CMakeLists.txt  sqlcipher-lock-gtest.cc
